Fix featured book layout on small screens

--- a/scripts/modules/featured-books/featured-books.less
+++ b/scripts/modules/featured-books/featured-books.less
@@ -17,6 +17,10 @@
         display: none;
         margin-bottom: 15px;
 
+        @media screen and (max-width: @screen-tiny-max) {
+            padding-left: 0 !important;
+        }
+
         img {
             float: left;
             margin-right: 20px;
